--- a/firebase.json
+++ b/firebase.json
@@ -3,6 +3,7 @@
     "rules": "database.rules.json"
   },
   "hosting": {
+    "site": "implode",
     "public": "public",
     "ignore": [
       "firebase.json",
