--- a/firebase.json
+++ b/firebase.json
@@ -3,7 +3,7 @@
     "rules": "database.rules.json"
   },
   "hosting": {
-    "public": "templates",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
